--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "alternate.js",
-  "scripts": { 
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts": {
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "rowjay",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "nodemon": "^2.0.12"
   }
 }
